多级表头功能提交

--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -160,14 +160,14 @@
     }
     .el-menu-item.is-active {
       color: white;
-      background-color: #1890ff;
+      background-color: #0a64b7;
     }
     .el-menu-item:hover,
     .el-menu-item:focus,
     .el-submenu__title:hover {
       outline: none;
       color: white;
-      background-color: #1890ff;
+      background-color: #0a64b7;
     }
     .menu_control {
       position: absolute;
@@ -720,7 +720,8 @@
 /* settingForm  start*/
 .settingForm {
   .el-dialog {
-    width: 1200px;
+    width: 1300px;
+    max-width: 99%;
   }
   .el-dialog__body {
     max-height: 500px;
@@ -856,6 +857,7 @@
   }
 }
 .keys-config-list {
+  margin-top: 12px;
   .icons {
     font-size: 22px;
     width: 110px;
@@ -1459,11 +1461,11 @@
         p {
           padding: 0;
           margin: 0;
+          cursor: pointer;
         }
       }
       .test {
         display: flex;
-
         justify-content: center;
       }
       .txt1 {
