--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -150,14 +150,14 @@
 }
 .KFQ_wrap .el-aside .el-menu-item.is-active {
   color: white;
-  background-color: #1890ff;
+  background-color: #0a64b7;
 }
 .KFQ_wrap .el-aside .el-menu-item:hover,
 .KFQ_wrap .el-aside .el-menu-item:focus,
 .KFQ_wrap .el-aside .el-submenu__title:hover {
   outline: none;
   color: white;
-  background-color: #1890ff;
+  background-color: #0a64b7;
 }
 .KFQ_wrap .el-aside .menu_control {
   position: absolute;
@@ -620,7 +620,8 @@
 }
 /* settingForm  start*/
 .settingForm .el-dialog {
-  width: 1200px;
+  width: 1300px;
+  max-width: 99%;
 }
 .settingForm .el-dialog__body {
   max-height: 500px;
@@ -753,6 +754,9 @@
 }
 .keys-config-setting .zdhq-btn {
   margin-bottom: 12px;
+}
+.keys-config-list {
+  margin-top: 12px;
 }
 .keys-config-list .icons {
   font-size: 22px;
@@ -1267,6 +1271,7 @@
 .top-bar-wrap .top-bar-box li > .list-box p {
   padding: 0;
   margin: 0;
+  cursor: pointer;
 }
 .top-bar-wrap .top-bar-box li .test {
   display: flex;
