自定义空白模板功能添加

--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -18,12 +18,18 @@
 #bao-wei-charts {
   height: 100%;
   font-size: 14px;
+  box-sizing: content-box;
+}
+#bao-wei-charts h1,
+#bao-wei-charts h2,
+#bao-wei-charts h3,
+#bao-wei-charts h4,
+#bao-wei-charts h5,
+#bao-wei-charts p {
   padding: 0;
   margin: 0;
-  list-style: none;
   text-decoration: none;
   outline: none;
-  box-sizing: content-box;
 }
 .KFQ_wrap {
   height: 100%;
@@ -49,7 +55,6 @@
   font-size: 16px;
   font-weight: 600;
   padding-right: 10px;
-  padding-left: 3px;
   color: white;
 }
 .KFQ_wrap .el-header .logo .menu_icon {
@@ -153,8 +158,7 @@
   background-color: #0a64b7;
 }
 .KFQ_wrap .el-aside .el-menu-item:hover,
-.KFQ_wrap .el-aside .el-menu-item:focus,
-.KFQ_wrap .el-aside .el-submenu__title:hover {
+.KFQ_wrap .el-aside .el-menu-item:focus {
   outline: none;
   color: white;
   background-color: #0a64b7;
@@ -338,8 +342,8 @@
 .statistics_title .el-icon-close {
   position: absolute;
   font-size: 20px;
-  right: 0;
-  top: 0;
+  right: 2px;
+  top: 2px;
   color: white;
   cursor: pointer;
 }
@@ -529,7 +533,7 @@
   height: 100%;
 }
 .statisticsWrapCase2 .statisticsBox .statistics-content {
-  padding: 0 20px 10px;
+  padding: 5px 10px 10px;
 }
 .statisticsWrapCase2 .suofang {
   position: absolute;
@@ -1344,10 +1348,12 @@
 .static-iframe {
   display: block;
   width: 100%;
+  border: none;
+  overflow: hidden;
 }
 .iframe-statistics-wrap {
   padding: 0;
-  border-radius: 0;
+  box-shadow: 0px 0px 5px rgba(123, 117, 117, 0.54);
 }
 .iframe-statistics-wrap .statistics_title {
   box-sizing: border-box;
@@ -1355,8 +1361,8 @@
   position: absolute;
   padding: 5px 10px 0;
   width: 100%;
-  top: 2px;
-  left: 2px;
+  top: 0px;
+  left: 0px;
   z-index: 8;
   color: white;
 }
@@ -1398,4 +1404,35 @@
 .destail-theme-1 .detail_row .detail_col .theme-2-list .val {
   width: 100%;
   line-height: 25px;
+}
+/*多表头配置页面*/
+.table-header-setting-dialog .el-dialog {
+  width: 600px;
+  margin-top: 150px;
+}
+.table-header-setting-dialog .el-dialog .el-tree {
+  margin: 10px 0;
+}
+.table-header-setting-dialog .el-dialog .el-tree .custom-tree-node {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  padding-right: 8px;
+}
+.table-header-setting-dialog .el-dialog .header-name-setting {
+  display: flex;
+}
+.table-header-setting-dialog .el-dialog .header-name-setting > span {
+  width: 100px;
+  line-height: 32px;
+  display: block;
+}
+.table-header-setting-dialog .el-dialog .header-name-setting .el-checkbox-group {
+  width: calc(100% - 100px);
+}
+.table-header-setting-dialog .el-dialog .header-name-setting .el-checkbox,
+.table-header-setting-dialog .el-dialog .header-name-setting .el-radio {
+  line-height: 32px;
 }
