--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -20,12 +20,19 @@
 #bao-wei-charts {
   height: 100%;
   font-size: 14px;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-decoration: none;
-  outline: none;
   box-sizing: content-box;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p {
+    padding: 0;
+    margin: 0;
+
+    text-decoration: none;
+    outline: none;
+  }
 }
 @headerHeight: 38px;
 .KFQ_wrap {
@@ -54,7 +61,7 @@
         font-size: 16px;
         font-weight: 600;
         padding-right: 10px;
-        padding-left: 3px;
+        // padding-left: 3px;
         color: white;
       }
       .menu_icon {
@@ -163,8 +170,7 @@
       background-color: #0a64b7;
     }
     .el-menu-item:hover,
-    .el-menu-item:focus,
-    .el-submenu__title:hover {
+    .el-menu-item:focus {
       outline: none;
       color: white;
       background-color: #0a64b7;
@@ -374,8 +380,8 @@
   .el-icon-close {
     position: absolute;
     font-size: 20px;
-    right: 0;
-    top: 0;
+    right: 2px;
+    top: 2px;
     color: white;
     cursor: pointer;
   }
@@ -611,7 +617,7 @@
     width: 100%;
     height: 100%;
     .statistics-content {
-      padding: 0 20px 10px;
+      padding: 5px 10px 10px;
     }
   }
 
@@ -1545,10 +1551,15 @@
 .static-iframe {
   display: block;
   width: 100%;
+  border: none;
+  //
+  // border-radius: 5px;
+  overflow: hidden;
 }
 .iframe-statistics-wrap {
   padding: 0;
-  border-radius: 0;
+  box-shadow: 0px 0px 5px rgba(123, 117, 117, 0.54);
+  // border-radius: 0;
   .statistics_title {
     box-sizing: border-box;
     display: none;
@@ -1556,8 +1567,8 @@
     padding: 5px 10px 0;
     // padding-top: 5px;
     width: 100%;
-    top: 2px;
-    left: 2px;
+    top: 0px;
+    left: 0px;
     z-index: 8;
     // background: #f5f8fb;
     color: white;
@@ -1603,6 +1614,43 @@
           width: 100%;
           line-height: 25px;
         }
+      }
+    }
+  }
+}
+
+/*多表头配置页面*/
+.table-header-setting-dialog {
+  .el-dialog {
+    width: 600px;
+    margin-top: 150px;
+    .el-tree {
+      margin: 10px 0;
+      .custom-tree-node {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 14px;
+        padding-right: 8px;
+      }
+    }
+    // .tree-right-btn {
+    //   margin-left: 50px;
+    // }
+    .header-name-setting {
+      display: flex;
+      & > span {
+        width: 100px;
+        line-height: 32px;
+        display: block;
+      }
+      .el-checkbox-group {
+        width: ~'calc(100% - 100px)';
+      }
+      .el-checkbox,
+      .el-radio {
+        line-height: 32px;
       }
     }
   }
