--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -1536,6 +1536,8 @@
       // padding: 10px;
       .warning {
         color: #e6a23c;
+        margin: 0;
+        padding:0
       }
     }
     .top-bar-setting-list {
