配置模块添加配置数据Json展示、数据双向绑定功能

--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -789,6 +789,42 @@
 .iframe-dy-box .fieldset-list .zdpz_list li > span:nth-child(3) {
   width: 300px;
 }
+.setting-json-show {
+  position: absolute;
+  width: 20px;
+  line-height: 20px;
+  text-align: center;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 15px;
+  z-index: 9;
+  cursor: pointer;
+}
+.setting-json-show.setting-json-false {
+  right: 510px;
+  color: red !important;
+}
+/*模块配置json数据展示*/
+.setting-json {
+  height: 100%;
+  width: 500px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 999;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #333333;
+}
+.setting-json .el-textarea {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+}
+.setting-json .el-textarea textarea {
+  min-height: 100% !important;
+  background: #1e1e1e;
+  color: #b3ba6e;
+}
 /*模块配置--参数配置*/
 .param-config-setting {
   margin-right: 10px;
