--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -630,6 +630,7 @@
 .settingForm .el-dialog__body {
   max-height: 500px;
   overflow-y: auto;
+  position: relative;
 }
 .settingForm .el-form-item__label {
   font-size: 13px;
@@ -789,25 +790,9 @@
 .iframe-dy-box .fieldset-list .zdpz_list li > span:nth-child(3) {
   width: 300px;
 }
-.setting-json-show {
-  position: absolute;
-  width: 20px;
-  line-height: 20px;
-  text-align: center;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 15px;
-  z-index: 9;
-  cursor: pointer;
-}
-.setting-json-show.setting-json-false {
-  right: 510px;
-  color: red !important;
-}
 /*模块配置json数据展示*/
 .setting-json {
   height: 100%;
-  width: 500px;
   position: absolute;
   top: 0;
   right: 0;
@@ -815,9 +800,28 @@
   border-radius: 5px;
   box-shadow: 0 0 5px #333333;
 }
-.setting-json .el-textarea {
+.setting-json .setting-json-box {
+  position: relative;
   height: 100%;
   width: 100%;
+}
+.setting-json .setting-json-box .setting-json-show {
+  position: absolute;
+  width: 20px;
+  line-height: 20px;
+  text-align: center;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -30px;
+  z-index: 9;
+  cursor: pointer;
+}
+.setting-json .setting-json-box .setting-json-show.setting-json-false {
+  color: red !important;
+}
+.setting-json .el-textarea {
+  height: 100%;
+  width: 500px;
   overflow-y: auto;
 }
 .setting-json .el-textarea textarea {
@@ -1180,7 +1184,7 @@
   }
   .settingForm .el-dialog .el-dialog__body,
   .destail-setting .el-dialog .el-dialog__body {
-    max-height: 400px;
+    max-height: 450px;
   }
   .QXStatistics .statistics_title .box .t_list,
   .YDGCStatistics .statistics_title .box .t_list {
