--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -155,13 +155,13 @@
 }
 .KFQ_wrap .el-aside .el-menu-item.is-active {
   color: white;
-  background-color: #0a64b7;
+  background-color: #0083e6;
 }
 .KFQ_wrap .el-aside .el-menu-item:hover,
 .KFQ_wrap .el-aside .el-menu-item:focus {
   outline: none;
   color: white;
-  background-color: #0a64b7;
+  background-color: #0083e6;
 }
 .KFQ_wrap .el-aside .menu_control {
   position: absolute;
@@ -537,7 +537,7 @@
   height: 100%;
 }
 .statisticsWrapCase2 .statisticsBox .statistics-content {
-  padding: 5px 10px 10px;
+  padding: 5px;
 }
 .statisticsWrapCase2 .suofang {
   position: absolute;
@@ -1259,7 +1259,7 @@
   line-height: 20px;
 }
 .static-where-2 .staticWhereBottom {
-  line-height: 39px;
+  line-height: 36px;
   margin-left: 10px;
 }
 .static-where-2 .where-right {
@@ -1305,13 +1305,18 @@
 .top-bar-wrap #top-bar-box li {
   flex: 1;
   margin-left: 5px;
-  padding: 5px;
   border-radius: 5px;
-  background: url(../images/u771.png);
-  background-size: 100% 100%;
   color: white;
   text-align: center;
   list-style: none;
+}
+.top-bar-wrap #top-bar-box li .top-bar-boxs {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  background: url(../images/bg.png);
+  background-size: 100% 100%;
 }
 .top-bar-wrap #top-bar-box li > .list-box {
   position: relative;
@@ -1326,8 +1331,8 @@
   justify-content: center;
 }
 .top-bar-wrap #top-bar-box li .txt1 {
-  font-size: 18px;
-  margin-bottom: 10px !important;
+  font-size: 16px;
+  margin-bottom: 5px !important;
   font-weight: 700;
 }
 .top-bar-wrap #top-bar-box li .txt2 {
@@ -1343,7 +1348,7 @@
 }
 .top-bar-wrap #top-bar-box li .txt3 {
   font-size: 16px;
-  margin: 0 6px;
+  margin: 0 3px;
 }
 .top-bar-wrap #top-bar-box li .txt3 .t1 {
   font-weight: 500;
