--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -167,13 +167,13 @@
     }
     .el-menu-item.is-active {
       color: white;
-      background-color: #0a64b7;
+      background-color: #0083e6;
     }
     .el-menu-item:hover,
     .el-menu-item:focus {
       outline: none;
       color: white;
-      background-color: #0a64b7;
+      background-color: #0083e6;
     }
     .menu_control {
       position: absolute;
@@ -621,7 +621,7 @@
     width: 100%;
     height: 100%;
     .statistics-content {
-      padding: 5px 10px 10px;
+      padding: 5px;
     }
   }
 
@@ -644,7 +644,6 @@
     display: block;
   }
 }
-
 .shubiao-move {
   cursor: move;
 }
@@ -662,6 +661,7 @@
     cursor: ne-resize;
   }
 }
+
 /*字段配置、参数配置公共样式*/
 .zdpz_list {
   display: inline-block;
@@ -1451,7 +1451,7 @@
   }
 
   .staticWhereBottom {
-    line-height: 39px;
+    line-height: 36px;
     margin-left: 10px;
   }
   .where-right {
@@ -1497,14 +1497,22 @@
     li {
       flex: 1;
       margin-left: 5px;
-      padding: 5px;
+     
       border-radius: 5px;
       // min-height: 80px;
-      background: url(../images/u771.png);
-      background-size: 100% 100%;
+      // background: url(../images/u771.png);
+      // background-size: 100% 100%;
+      
       color: white;
       text-align: center;
       list-style: none;
+      .top-bar-boxs{
+        position: relative;
+        width: 100%;height: 100%;
+        padding: 5px;
+        background: url(../images/bg.png);
+        background-size: 100% 100%;
+      }
       > .list-box {
         position: relative;
         top: 50%;
@@ -1520,8 +1528,8 @@
         justify-content: center;
       }
       .txt1 {
-        font-size: 18px;
-        margin-bottom: 10px !important;
+        font-size: 16px;
+        margin-bottom: 5px !important;
         font-weight: 700;
       }
       .txt2 {
@@ -1539,7 +1547,7 @@
         font-size: 16px;
         // font-weight: 700;
         // flex: 1;
-        margin: 0 6px;
+        margin: 0 3px;
 
         // border-left: 1px solid @border;
         .t1 {
