--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -167,7 +167,7 @@
     }
     .el-menu-item.is-active {
       color: white;
-      background-color: #0083e6;
+      // background-color: #0083e6;
     }
     .el-menu-item:hover,
     .el-menu-item:focus {
@@ -1513,7 +1513,7 @@
         background: url(../images/bg.png);
         background-size: 100% 100%;
       }
-      > .list-box {
+       .list-box {
         position: relative;
         top: 50%;
         transform: translateY(-50%);
