--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -693,6 +693,9 @@
     .hTxt81 {
       width: 90px;
     }
+    .hTxt83{
+      width: 78px;
+    }
   }
   .zdpz_list_header .icons {
     font-size: 24px;
@@ -974,9 +977,9 @@
     display: flex;
     justify-content: space-between;
 
-    .btn {
-      width: 150px;
-    }
+    // .btn {
+    //   min-width: 150px;
+    // }
 
     button {
       padding: 2px 8px;
