--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -972,32 +972,32 @@
 
 /*饼图、环图模块配置*/
 .v_chart_pie {
-  .choose {
-    margin-top: 5px;
-    display: flex;
-    justify-content: space-between;
-
-    // .btn {
-    //   min-width: 150px;
-    // }
-
-    button {
-      padding: 2px 8px;
-      border: none;
-      border-radius: 5px;
-      background: #7f7f7f;
-      color: white;
-      margin-right: 5px;
-    }
-    .txt {
-      display: block;
-      color: #7f7f7f;
-    }
-  }
 
   .pie_box {
     position: relative;
     width: 100%;
+  }
+}
+.v_chart_pie_choose {
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-between;
+
+  // .btn {
+  //   min-width: 150px;
+  // }
+
+  button {
+    padding: 2px 8px;
+    border: none;
+    border-radius: 5px;
+    background: #7f7f7f;
+    color: white;
+    margin-right: 5px;
+  }
+  .txt {
+    display: block;
+    color: #7f7f7f;
   }
 }
 
