--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -1304,6 +1304,7 @@
 .top-bar-wrap #top-bar-box li {
   flex: 1;
   margin-left: 5px;
+  cursor: pointer;
   border-radius: 5px;
   color: white;
   text-align: center;
