--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -1500,7 +1500,7 @@
     li {
       flex: 1;
       margin-left: 5px;
-     
+      cursor: pointer;
       border-radius: 5px;
       // min-height: 80px;
       // background: url(../images/u771.png);
