--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -18,18 +18,17 @@ body {
 .theme-bg {
   background: #ebeef5;
 }
-/*框架布局*/
-#bao-wei-charts {
+.clear #bao-wei-charts {
   height: 100%;
   font-size: 14px;
   box-sizing: content-box;
 }
-#bao-wei-charts h1,
-#bao-wei-charts h2,
-#bao-wei-charts h3,
-#bao-wei-charts h4,
-#bao-wei-charts h5,
-#bao-wei-charts p {
+.clear #bao-wei-charts h1,
+.clear #bao-wei-charts h2,
+.clear #bao-wei-charts h3,
+.clear #bao-wei-charts h4,
+.clear #bao-wei-charts h5,
+.clear #bao-wei-charts p {
   padding: 0;
   margin: 0;
   text-decoration: none;
@@ -250,6 +249,7 @@ body {
   margin-left: 20px;
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
   padding: 0;
 }
 #bao-wei-charts .pageSetting .assembly_wrap li {
@@ -898,7 +898,7 @@ body {
 }
 /*screenForm*/
 .screenForm .el-dialog {
-  width: 1100px;
+  width: 1200px;
 }
 .screenForm .el-dialog .screenForm-top {
   margin-bottom: 15px;
@@ -1230,9 +1230,6 @@ body {
 .static-where-2 .where-left {
   display: flex;
 }
-.static-where-2 .where-form {
-  display: flex;
-}
 .static-where-2 .where-form .el-form-item__label {
   padding-right: 0px;
   text-align: left;
@@ -1241,6 +1238,7 @@ body {
 .static-where-2 .where-form .el-form-item {
   margin-bottom: 0;
   margin-right: 5px;
+  float: left;
 }
 .static-where-2 .where-form .el-input__inner {
   padding: 0 5px;
@@ -1332,6 +1330,7 @@ body {
   width: 100%;
   height: 100%;
   padding: 5px;
+  box-sizing: border-box;
   background: url(../images/bg.png);
   background-size: 100% 100%;
 }
@@ -1428,21 +1427,22 @@ body {
   padding: 0;
   box-shadow: 0px 0px 5px rgba(123, 117, 117, 0.54);
 }
-.iframe-statistics-wrap .statistics_title {
+.iframe-statistics-wrap .statisticsBox .statistics-content {
+  padding: 0;
+}
+.iframe-statistics-wrap .statistics_title,
+.title-hide .statistics_title {
   box-sizing: border-box;
   display: none;
   position: absolute;
-  padding: 5px 10px 0;
   width: 100%;
   top: 0px;
   left: 0px;
   z-index: 8;
   color: white;
 }
-.iframe-statistics-wrap .statisticsBox .statistics-content {
-  padding: 0;
-}
-.iframe-statistics-wrap:hover .statistics_title {
+.iframe-statistics-wrap:hover .statistics_title,
+.title-hide:hover .statistics_title {
   display: block;
 }
 /*菜单编码弹窗*/
@@ -1526,4 +1526,11 @@ body {
   top: 10px;
   cursor: pointer;
   font-size: 16px;
+}
+/*tabs切换配置模块*/
+.tabs-setting-form-dialog .el-dialog {
+  width: 1000px;
+}
+.tabs-setting-form-dialog .el-dialog .el-form-item {
+  margin-bottom: 12px;
 }
