--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -1003,10 +1003,11 @@ body{
   // margin-top: 5px;
   display: flex;
   justify-content: space-between;
+  justify-items: center;
 
-  // .btn {
-  //   min-width: 150px;
-  // }
+  .btn {
+    display:flex
+  }
 
   button {
     padding: 2px 8px;
@@ -1019,7 +1020,6 @@ body{
   .txt {
     display: block;
     color: #7f7f7f;
-    min-width:80px;
     text-align: right;
   }
 }
